--- a/test3/test3.ipynb
+++ b/test3/test3.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -11,7 +13,39 @@
      "text": [
       "======== init ========\n",
       "===== load mnist =====\n",
-      "init done.\n"
+      "init done.\n",
+      "=== training done ====\n",
+      "5 5\n",
+      "6 0\n",
+      "2 4\n",
+      "0 1\n",
+      "7 9\n",
+      "5 2\n",
+      "6 1\n",
+      "9 3\n",
+      "3 1\n",
+      "4 4\n",
+      "3 3\n",
+      "4 5\n",
+      "1 3\n",
+      "8 6\n",
+      "5 1\n",
+      "3 7\n",
+      "7 2\n",
+      "7 8\n",
+      "8 6\n",
+      "9 9\n",
+      "1 4\n",
+      "6 0\n",
+      "4 9\n",
+      "8 1\n",
+      "6 1\n",
+      "7 2\n",
+      "4 4\n",
+      "9 3\n",
+      "3 2\n",
+      "6 7\n",
+      "===== test done ======\n"
      ]
     }
    ],
@@ -45,7 +79,6 @@
     "# (3) It's not a end-to-end system>>> it's side-by-side\n",
     "#     Input A and Output B all viewed as input signals\n",
     "#     Output B connected to a hidden layer of net extending from A\n",
-    "\n",
     "\n",
     "# Proactive Probalistic Reference Net\n",
     "\n",
@@ -93,39 +126,40 @@
     "\n",
     "\n",
     "class PPRN:\n",
+    "    '''\n",
+    "    eta : learning rate for Probalistic Proactive Reference Net\n",
+    "    dim : neural network dimension\n",
+    "    hid : hidden layers\n",
+    "    som : parameters, self organizing map\n",
+    "    '''\n",
     "    eta = 0\n",
-    "    in_dim = []\n",
-    "    out_dim = []\n",
-    "    hid_dep = 0\n",
-    "    hid_dim = []\n",
-    "    som_dim = []\n",
+    "    dim = []\n",
     "    hid = []\n",
     "    som = []\n",
-    "    def init(self, in_dim, out_dim, hid_dep, eta):\n",
+    "    \n",
+    "    def init(self, dim, eta):\n",
+    "        '''\n",
+    "        initial for the class\n",
+    "        dim : the dimension for PPRN\n",
+    "        eta : the learning rate\n",
+    "        '''\n",
     "        self.eta = eta\n",
-    "        self.in_dim = in_dim\n",
-    "        self.out_dim = out_dim\n",
-    "        self.hid_dep = hid_dep\n",
-    "        self.hid_dim = np.zeros(hid_dep, dtype=np.int)\n",
-    "        self.som_dim = np.zeros([hid_dep, 3], dtype=np.int)\n",
-    "        self.hid = list(range(hid_dep))\n",
-    "        self.som = list(range(hid_dep))\n",
-    "        times = 1\n",
-    "        init_hid_dim = 2**hid_dep\n",
-    "        for i in range(hid_dep): \n",
-    "            times = times * 2\n",
-    "            self.hid_dim[i] = times * self.in_dim\n",
-    "            self.som_dim[i, :] = [self.hid_dim[i], init_hid_dim/times, self.hid_dim[i]/2]\n",
-    "            self.hid[i] = np.zeros([self.som_dim[i,0], self.som_dim[i,1]])\n",
-    "            self.som[i] = np.random.rand(self.som_dim[i, 0], self.som_dim[i, 1], self.som_dim[i, 2])\n",
+    "        self.dim = dim\n",
+    "        self.hid = list(range(dim.shape[0]))\n",
+    "        self.som = list(range(dim.shape[0]))\n",
+    "        \n",
+    "        for i in range(dim.shape[0]):\n",
+    "            self.hid[i] = np.zeros([self.dim[i,0], self.dim[i,1]])\n",
+    "            self.som[i] = np.random.rand(self.dim[i, 0], self.dim[i, 1], self.dim[i, 2])\n",
     "        print 'init done.'\n",
-    "    # 1. layer by layer training\n",
-    "    # 2. probalistic activation\n",
-    "    # 3. selective learning for the supervised learning\n",
-    "    def train(self, x, y):\n",
-    "        for i in range(self.hid_dep):\n",
-    "            for j in range(self.som_dim[i,0]):\n",
-    "                for k in range(self.som_dim[i,1]):\n",
+    "        \n",
+    "    def train(self, x):\n",
+    "        '''\n",
+    "        training net with unlabeled data of [x]\n",
+    "        '''\n",
+    "        for i in range(self.dim.shape[0]):\n",
+    "            for j in range(self.dim[i,0]):\n",
+    "                for k in range(self.dim[i,1]):\n",
     "                    if i==0:\n",
     "                        self.hid[i][j,k] = response(x, self.som[i][j,k,:])\n",
     "                    else:\n",
@@ -134,18 +168,19 @@
     "                if m > np.random.rand(1): # probalistic activation\n",
     "                    # update all patterns in som according to its response value\n",
     "                    if i == 0:\n",
-    "                        for k in range(self.som_dim[i,1]):\n",
+    "                        for k in range(self.dim[i,1]):\n",
     "                            self.som[i][j,k,:] += \\\n",
     "                            self.eta*(self.hid[i][j,k]/m)*(x-self.som[i][j,k,:])\n",
     "                    else:\n",
-    "                        for k in range(self.som_dim[i,1]):\n",
+    "                        for k in range(self.dim[i,1]):\n",
     "                            self.som[i][j,k,:] += self.eta*(self.hid[i][j,k]/m)*\\\n",
     "                            (self.hid[i-1][:,0]-self.som[i][j,k,:])\n",
     "                    # store the maximum value on first element as hidden activation\n",
-    "                    self.hid[i][j,0] = m\n",
-    "                else:\n",
-    "                    # store the maximum value on first element as hidden activation\n",
-    "                    self.hid[i][j,0] = 0\n",
+    "                self.hid[i][j,0] = m\n",
+    "                    \n",
+    "    def test(self, x):\n",
+    "        self.train(x)\n",
+    "        return np.argmax(self.hid[self.dim.shape[0]-1][:,0])\n",
     "\n",
     "def main():\n",
     "    print '======== init ========'\n",
@@ -158,17 +193,21 @@
     "    test_lb_path = '../MNIST/t10k-labels-idx1-ubyte'\n",
     "    # prepare data for training and testing\n",
     "    print '===== load mnist ====='\n",
-    "    [ims_train, h, w, lbs] = load_mnist(train_im_path, train_lb_path)\n",
+    "    [ims_train, h, w, lbs_train] = load_mnist(train_im_path, train_lb_path)\n",
     "    train_num = ims_train.shape[0]\n",
     "    numlbl = 10\n",
     "    # load test mnist data\n",
     "    [ims_test, h, w, lbs_test] = load_mnist(test_im_path, test_lb_path)\n",
     "    test_num = ims_test.shape[0]\n",
     "    # apply a dataset\n",
-    "    net.init(h*w, numlbl, 3, 0.1)\n",
-    "    for i in range(train_num):\n",
-    "        net.train(ims_train[i,:], [])\n",
-    "    print '=== procedure done ==='\n",
+    "    net.init(np.array([[numlbl, 32, h*w]]), 0.1)\n",
+    "    for i in range(100000):\n",
+    "        net.train(ims_train[i%100,:]/255.0)\n",
+    "    print '=== training done ===='\n",
+    "    # test the model\n",
+    "    for i in range(30):\n",
+    "        print net.test(ims_train[i,:]/255.0), int(lbs_train[i])\n",
+    "    print '===== test done ======'\n",
     "    \n",
     "main()\n"
    ]
