--- a/ecrc-procs/hybrid_learning_net.tex
+++ b/ecrc-procs/hybrid_learning_net.tex
@@ -183,14 +183,14 @@
 
 \begin{abstract}
 %% Text of abstract
-There're many efficient architectures 
+There're many effective architectures 
 of the artificial neural network(ANN).
 For which the training is a hard work.
 The cost for training an ANN increases
 exponentially when the ANN gets deeper 
 or wider. 
 We therefore propose a novel 
-achitecture, the Hybrid Learning
+architecture, the Hybrid Learning
 Network(HLN), to achieve a fast learning 
 with good stablity.
 The HLN can learn from both
@@ -209,7 +209,7 @@ traditional architecture, the result
 is promising.
 We also experiment on the well-known
 MNIST dataset, it demonstrates an 
-even more impressive learning efficiency 
+even more impressive learning eciency 
 by up to $40\times$ speed-up on training.
 \end{abstract}
 
@@ -257,7 +257,7 @@ for speech recognition
 \cite{graves2013hybrid}, etc. 
 These specially designed neural 
 networks are trained by 
-a few efficient methods such as
+a few ecient methods such as
 the stochastic gradient 
 descent(SGD)\cite{bottou2010large}. 
 Such architectures
@@ -552,7 +552,7 @@ with the regression steps.
 Hybrid Learning Network is a novel
 architecture aiming at 
 enhancing arbitrary networks
-on their training efficiency
+on their training eciency and
 stablity.
 Each hidden layer in HLN architecture 
 is embedded with a SOM. For the 
@@ -1295,7 +1295,7 @@ benchmark dataset.
 As the experiments showed,
 ANNs of HLN architecture 
 proved better performance in
-training efficiency and stablity.
+training eciency and stablity.
 In the future, we will investigate
 other capabilities of HLN on more
 pulic datasets such as CIFAR-10 and
