--- a/test4/test4.ipynb
+++ b/test4/test4.ipynb
@@ -4,6 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**The Abstraction or may say, the Theory of my idea about AI:**\n",
+    "1. In my view, a neuron is a pattern attractor, it is parametric with $\\theta\\leftarrow \\left<w_1,w_2,\\dots,w_n\\right>$, a tuple that contains finite elements. It attracts patterns with condition like:  $$ \\sigma(\\theta, x) \\in (0, +\\infty] $$, in which $\\sigma$ is an activation function. In my experiment, I set it as $\\sigma(\\theta,x)=\\theta\\cdot x$.\n",
+    "\n",
+    "2. For any of the neuron in a neural system, it will be affected by other ones in a manner like: $$\n",
+    "\n",
+    "\n",
     "For input space $\\mathbf{X}\\in \\mathbb{R}^J$:\n",
     "$$\n",
     "\\mathbf{X}\\triangleleft\\left<x_1,x_2,\\cdots,x_J\\right>\n",
