latex template changed

--- a/test2/latex/hln.tex
+++ b/test2/latex/hln.tex
@@ -24,7 +24,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{Semi-supervised Training Strategy With Unsupervised Trainable Activation Sparsity}
+\title{Integrating Semi-supervised Module into Deep Architecture}
 
 \author{Liu Ying\\
 University of Chinese Academy of Sciences\\
